--- a/ICTQ4PROJECT/3rdQuarter.html
+++ b/ICTQ4PROJECT/3rdQuarter.html
@@ -205,7 +205,8 @@
     <img src="https://images.squarespace-cdn.com/content/v1/5c8a86889d41495d602da13f/163d0503-20a7-431e-bcb8-ecd3ae7fd9fe/Ricky+Montgomery+Drops+Nostalgic+EP+%27It%27s+2016+Somewhere%27+%7C+Pop+Nerd+Lounge">
     <p><b>⇆ㅤ ||◁ㅤ❚❚ㅤ▷||ㅤ ↻</b></p>
     <p><b>0:00 ─〇─────────────────── 0:00ılı.lıllılı.ıllı.</b></p>
-    <br>
+    <br><br>
+	<a href="mainpage.html" id="mainpage"><button class="btn btn-light">Go back to main page.</a></button>
 </center>
 </td>
 </tr>
