--- a/ICTQ4PROJECT/mainpage.html
+++ b/ICTQ4PROJECT/mainpage.html
@@ -57,6 +57,9 @@
 		<a class="navbar-brand"><img src="Q4LOGO.png" id="brand"></a>
 		<div id="topnav">
 				<ul class="navbar-nav"> 
+		        <li class="nav-item text-secondary"> 
+				<a class="nav-link" href="Starman.png">About Me</a> 
+			</li>
 			<li class="nav-item text-secondary"> 
 				<a class="nav-link" href="1stQuarter.html">First Quarter</a> 
 			</li>
