--- a/ICTQ4PROJECT/mainpage.html
+++ b/ICTQ4PROJECT/mainpage.html
@@ -83,6 +83,12 @@
 
 <h1 id="title"> Darlen Jenise Mitchell</h1>
 </center>
+
+		<br> <br><br> <br>
+<div class="footer" id="footer">
+  <a class="nav-link" href="https://www.instagram.com/starkeeper.__/?hl=en" target="blank"> <img id="ig" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp1Evduq4AwGPuGxphrlIW8aOZ5O5F51WvOw&usqp=CAU"> </a>
+  <a class="nav-link" href="https://open.spotify.com/user/31vr5ukcdhb5ivdysjw3gb5zbj2y" target="blank"> <img id="spotify" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRqwcc6C0sfe2Hb-aASZsV8m5vr3fCgtFLbg&usqp=CAU"> </a>
+</div>
 </body>
 </head>
 </html>
