--- a/ICTQ4PROJECT/mainpage.html
+++ b/ICTQ4PROJECT/mainpage.html
@@ -49,6 +49,27 @@
      	font-weight: bold;
      }
 
+		 #ig {
+     	height: 50px;
+     	width: 50px;
+     }
+
+      #spotify {
+     	height: 50px;
+     	width: 50px;
+     }
+
+     #footer {
+     	position: fixed;
+     	left: 0;
+		bottom: 0;
+		width: 100%;
+		text-align: center;
+		align-content: center;
+		display:flex;
+		background-color: black;
+     }
+
 	</style>
 	<title>mainpage</title>
 	<body>
